bk_ida/gobmkida/c0/get_command
/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/get_command/src/interface/play_ascii.c:873:26: error: use of undeclared identifier 'dword_4EBC6B'
if ( !strncmp( commanda, dword_4EBC6B, 5uLL) ) 
                         ^
1 error generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/get_command/src/obj/2/play_ascii.o] Error 1
